k8s/bitcoin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bitcoin
  name: bitcoin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bitcoin
  strategy: {}
  template:
    metadata:
      labels:
        app: bitcoin
    spec:
      volumes:
        - name: custom-html
          emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
        - name: custom-html
          mountPath: /usr/share/nginx/html
          readOnly: false
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bitcoin
  name: bitcoin
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bitcoin
  type: ClusterIP
status:
  loadBalancer: {}
