k8s/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scam-routes
spec:
  parentRefs:
  - name: nginx-gateway
    sectionName: https
  hostnames:
    - "apps.k8s.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /bitcoin
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /
    backendRefs:
    - name: bitcoin
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /truth
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /
    backendRefs:
    - name: truth-social
      port: 80
