k8s/truth-social.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: truth-social
  name: truth-social
spec:
  replicas: 1
  selector:
    matchLabels:
      app: truth-social
  strategy: {}
  template:
    metadata:
      labels:
        app: truth-social
    spec:
      volumes:
        - name: custom-html
          emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
        - name: custom-html
          mountPath: /usr/share/nginx/html
          readOnly: false
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: truth-social
  name: truth-social
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: truth-social
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truth-social
spec:
  parentRefs:
  - name: nginx-gateway
    sectionName: https
  hostnames:
    - "k8s.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /truth-social
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /
    backendRefs:
    - name: truth-social
      port: 80
